# adaq

./: .gitignore  .releaserc.json  AGENTS.md  CONTEXT.md  README.md  babel.config.cjs  biome.json  github_release.sh  jest.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
docs/prd/: adaq-v1.0-prd.md
release/: latest.json
scripts/: semantic-release-prepare.mjs
src/: App.tsx  env.d.ts  router.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/crates/ada-data-core/: Cargo.toml
src-tauri/crates/ada-data-core/src/: lib.rs
src-tauri/src/: lib.rs  main.rs
src/components/: app-sidebar.tsx  app-titlebar.tsx  auth-gate.tsx  crypto-kline-card.tsx  inst-search-bar.tsx  nav-titlebar-transparent.tsx  nav-user.tsx  site-header.tsx
src/components/ui/: autoupdate-button.tsx  avatar.tsx  badge.tsx  breadcrumb.tsx  button.tsx  checkbox.tsx  dark-mode-dropdown-menu.tsx  dropdown-menu.tsx  select.tsx  separator.tsx  sheet.tsx  sidebar.tsx  slot.tsx  sonner.tsx  tabs.tsx  toggle-group.tsx  toggle.tsx  tooltip.tsx
src/config/: react-query.ts  trade-theme.ts  wchat-theme.ts
src/eastmoney/: eastmoney-url.json
src/layout/: home.tsx  layout-main.tsx
src/lib/: active-inst-store.ts  eastmoney.ts  http.ts  market-chart-adapter.ts  password.ts  supabase.ts  tauri-http-adapter.ts
src/styles/: globals.css
src/w/atoms/: FlashPrice.tsx  animatePrice.tsx
src/w/coin/: format-coin-price.ts  (+1 more)
supabase/migrations/: 20260629000000_auth_profiles.sql
(+8 files in other folders)
